--- a/kartvizit-app/src/app/components/about/about.component.html
+++ b/kartvizit-app/src/app/components/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<main>
+    <h1 class="page-title">About</h1>
+    <p class="page-description">Am ende lernen wir Angular mit Kartvizit-App</p>
+</main>
