--- a/kartvizit-app/src/app/components/home/home.component.html
+++ b/kartvizit-app/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<main>
+    <h1 class="page-title">Home Page</h1>
+    <p class="page-description">Wir lernen Angular mit einer Kartvizit-App</p>
+</main>
+
