added cards module...

--- a/kartvizit-app/src/app/components/header/header.component.html
+++ b/kartvizit-app/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <span>KartvizitApp</span>
         <span class="example-spacer"></span>
         <ul class="header-menu">
-            <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]=" { exact:true }">Home Page</a></li>
+            <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]=" { exact:true }">Home</a></li>
             <li><a routerLink="about" routerLinkActive="active">About</a></li>
             <li><a routerLink="cards" routerLinkActive="active">Card</a></li>
         </ul>
