added card component with styling...

--- a/kartvizit-app/src/app/components/header/header.component.html
+++ b/kartvizit-app/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <header class="header">
     <mat-toolbar class="custom-toolbar">
-        <span>KartvizitApp</span>
+        <span>VisitenKartApp</span>
         <span class="example-spacer"></span>
         <ul class="header-menu">
             <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]=" { exact:true }">Home</a></li>
-            <li><a routerLink="about" routerLinkActive="active">About</a></li>
-            <li><a routerLink="cards" routerLinkActive="active">Card</a></li>
+            <li><a routerLink="about" routerLinkActive="active">ÜberUns</a></li>
+            <li><a routerLink="cards" routerLinkActive="active">Kart</a></li>
         </ul>
     </mat-toolbar>
     
