added card-item component...

--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -3,137 +3,29 @@
   <p class="page-description">
     Auf diesem Bildschirm können Sie die Visitenkarten verwalten.
   </p>
+
   <hr />
 
   <div class="cards">
     <div class="row">
       <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div> 
       <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-12 col-md-4 col-lg-3">
-        <mat-card class="card-item">
-          <mat-card-header>
-            <mat-card-title>Sbry Cbc</mat-card-title>
-            <mat-card-subtitle>Developer</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <ul class="list-group">
-              <li class="list-group-item">0 555 555 55</li>
-              <li class="list-group-item">info&#64;mail.com</li>
-              <li class="list-group-item">Dordmund, NRW</li>
-            </ul>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>  <div class="col-12 col-md-4 col-lg-3">
+        <app-card-item [cardItem]="cardItem"></app-card-item>
+      </div>     
     </div>
   </div>
 </main>
