--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -1,31 +1,42 @@
 <main>
-  <h1 class="page-title">Visitenkarten</h1>
-  <p class="page-description">
-    Auf diesem Bildschirm können Sie die Visitenkarten verwalten.
-  </p>
+  <div class="d-flex align-items-center">
+    <div class="flex-grow-1">
+      <h1 class="page-title">Visitenkarten</h1>
+      <p class="page-description">
+        Auf diesem Bildschirm können Sie die Visitenkarten verwalten.
+      </p>
+    </div>
 
-  <hr />
-
+      <button mat-flat-button color="primary" (click)="openAddCardModel()">Neue Kart</button>
+  
+    <hr />
+  </div>
   <div class="cards">
     <div class="row">
       <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div> 
+      </div>
       <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>  <div class="col-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-12 col-md-4 col-lg-3">
         <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>     
+      </div>
     </div>
   </div>
 </main>
