--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -13,29 +13,8 @@
   </div>
   <div class="cards">
     <div class="row">
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
-      </div>
-      <div class="col-12 col-md-4 col-lg-3">
-        <app-card-item [cardItem]="cardItem"></app-card-item>
+      <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cards">
+        <app-card-item [cardItem]="card"></app-card-item>
       </div>
     </div>
   </div>
