updated cart-item with form styling...

--- a/kartvizit-app/src/app/cards/card-model/card-model.component.html
+++ b/kartvizit-app/src/app/cards/card-model/card-model.component.html
@@ -1,9 +1,30 @@
 <h2 mat-dialog-title>Neue Kart</h2>
 <mat-dialog-content class="mat-typography">
- 
+  <form [formGroup]="cardForm">
+    <mat-form-field class="example-full-width">
+      <mat-label>Title</mat-label>
+      <input matInput formControlName="title">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Phone</mat-label>
+      <input matInput formControlName="phone">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Address</mat-label>
+      <textarea matInput formControlName="address"></textarea>
+    </mat-form-field>
+  </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Added</button>
+  <button mat-button (click)="addCard()">Added</button>
 </mat-dialog-actions>
 
