--- a/kartvizit-app/src/app/cards/card-item/card-item.component.html
+++ b/kartvizit-app/src/app/cards/card-item/card-item.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-item">
     <mat-card-header>
-      <mat-card-title>{{cardItem.name}}</mat-card-title>
+      <mat-card-title>{{cardItem.name || '-'}}</mat-card-title>
       <mat-card-subtitle>{{cardItem.title}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
