--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="cards">
     <div class="row">
-      <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cards">
+      <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cardService.cards">
         <app-card-item [cardItem]="card"></app-card-item>
       </div>
     </div>
