--- a/kartvizit-app/src/app/cards/card-model/card-model.component.html
+++ b/kartvizit-app/src/app/cards/card-model/card-model.component.html
@@ -24,7 +24,12 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button (click)="data ? updateCard() : addCard()">{{data ? 'Bearbeiten' : 'Added'}}</button>
+  <div class=" flex-grow-1 text-start" *ngIf="data" >
+    <button mat-stroked-button color="warn" (click)="deleteCard()">Delete</button>
+  </div>
+  <div>
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-flat-button  color="primary" (click)="data ? updateCard() : addCard()">{{data ? 'Bearbeiten' : 'Added'}}</button>
+  </div>
 </mat-dialog-actions>
 
