--- a/kartvizit-app/src/app/cards/card-model/card-model.component.html
+++ b/kartvizit-app/src/app/cards/card-model/card-model.component.html
@@ -1,5 +1,9 @@
 <h2 mat-dialog-title>{{data ? 'Karte Bearbeiten' : 'Neue Karte'}}</h2>
 <mat-dialog-content class="mat-typography">
+  <div *ngIf="showSpinner">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  <br>
+  </div>
   <form [formGroup]="cardForm">
     <mat-form-field class="example-full-width">
       <mat-label>Title</mat-label>
@@ -25,11 +29,11 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <div class=" flex-grow-1 text-start" *ngIf="data" >
-    <button mat-stroked-button color="warn" (click)="deleteCard()">Delete</button>
+    <button mat-stroked-button color="warn" (click)="deleteCard()" [disabled]="showSpinner">Delete</button>
   </div>
   <div>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-flat-button  color="primary" (click)="data ? updateCard() : addCard()">{{data ? 'Bearbeiten' : 'Added'}}</button>
+    <button mat-flat-button  color="primary" (click)="data ? updateCard() : addCard()" [disabled]="cardForm.invalid || showSpinner">{{data ? 'Bearbeiten' : 'Added'}}</button>
   </div>
 </mat-dialog-actions>
 
