--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -13,6 +13,14 @@
   </div>
   <div class="cards">
     <div class="row">
+      <div class="col-12" *ngIf="!cardService.cards">
+        <span>Das alles kommt glech.....gedulttt</span>
+      </div>
+      <div class="col-12" *ngIf="cardService.cards?.length === 0">
+        <span>Sie haben noch keine Visitenkarte hinzugefügt.
+           <a class="text-info" (click)="openAddCardModel()">Klicken Sie hier</a>, um Ihre erste Visitenkarte hinzuzufügen.
+        </span>
+      </div>
       <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cardService.cards">
         <app-card-item [cardItem]="card"></app-card-item>
       </div>
