--- a/kartvizit-app/src/app/cards/cards.component.html
+++ b/kartvizit-app/src/app/cards/cards.component.html
@@ -6,8 +6,8 @@
         Auf diesem Bildschirm können Sie die Visitenkarten verwalten.
       </p>
     </div>
-
-      <button mat-flat-button color="primary" (click)="openAddCardModel()">Neue Kart</button>
+      <app-card-search></app-card-search>
+      <button mat-flat-button color="primary"style='margin-left:16px' (click)="openAddCardModel()">Neue Kart</button>
   
     <hr />
   </div>
@@ -21,7 +21,7 @@
            <a class="text-info" (click)="openAddCardModel()">Klicken Sie hier</a>, um Ihre erste Visitenkarte hinzuzufügen.
         </span>
       </div>
-      <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cardService.cards">
+      <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cardService.filteredCards">
         <app-card-item [cardItem]="card"></app-card-item>
       </div>
     </div>
