updated header und home styling...

--- a/kartvizit-app/src/app/components/home/home.component.html
+++ b/kartvizit-app/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="hero-content col-md-8">
       <h1 class="page-title">Professionelle Visitenkarten für Mitarbeiter</h1>
       <p class="page-description">Erstellen Sie anpassbare und verwaltbare Visitenkarten für Ihre Firmenmitarbeiter.</p>
-      <button routerLink="cards" class="btn btn-primary btn-lg">Jetzt starten</button>
+      <button routerLink="cards" class="btn btn-lg" style="background-color: #85485b; color: #f0e9e9;">Jetzt starten</button>
     </div>
     <div class="hero-image col-md-4 text-center">
       <img src="assets/hero-image.png" alt="Visitenkartenanwendung" class="img-fluid">
