--- a/kartvizit-app/src/app/components/header/header.component.scss
+++ b/kartvizit-app/src/app/components/header/header.component.scss
@@ -3,8 +3,8 @@
 }
  
 .custom-toolbar {
-    background-color: rgb(86, 241, 210);
-    color: rgb(17, 1, 1);
+    background-color: #895968;
+    color: #f0e9e9;
 }
 
 .header-menu {
@@ -17,11 +17,11 @@
         color: #170202;
         padding: 0 10px;
         text-decoration: none;
-        font-size: 15px;
+        font-size: 19px;
         opacity: 0.7;
         &:hover,
         &.active {
-          opacity: 1;
+          opacity: 2;
         }
       }
     }
